--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,7 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "tenacity>=9.0.0",
     "sqlmodel>=0.0.22",
-    "types-requests>=2.32.0.20241016",
-    "responses>=0.25.6",
+    "responses>=0.25.6"
 ]
 
 [build-system]
@@ -25,6 +24,8 @@ dev = [
     "pytest-asyncio>=0.25.2",
     "pytest>=8.3.4",
     "pandas-stubs>=2.2.3.241126",
+    "types-requests>=2.32.0.20241016",
+    "pillow>=11.1.0",
 ]
 
 [tool.pytest.ini_options]
